# CppTaskManager

./: .clang-format  .clang-tidy  .gitattributes  CMakeLists.txt
cmake/: Dependencies.cmake
src/app/: CMakeLists.txt  main.cpp  taskmaster.cpp  taskmaster.h
src/core/: CMakeLists.txt  command.h  command_parser.cpp  command_parser.h  parse_error.h
tests/: CMakeLists.txt  command_parser_test.cpp  sanity_test.cpp  tests.cpp
